--- a/ui/src/app/globals.css
+++ b/ui/src/app/globals.css
@@ -53,6 +53,7 @@ body {
   background-color: #3b3b3b;
   border: #222222 4px inset;
   transition: all 0.2s ease-in-out;
+  user-select: none;
 }
 
 .tile.unknown, .tile.flag {
